--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,13 @@
 header {
     text-align: center;
 }
+
+.umnojen{
+    border: 1px solid #333;
+    border-collapse: separate;
+    border-spacing: 2px;
+}
+td {
+    border: 1px solid grey;
+    padding: 5px;
+}
